# uidtree

./: .gitignore  README.md  conftest.py  pytest.ini  setup.cfg  setup.py
bplustree/: __init__.py  const.py  entry.py  memory.py  node.py  serializer.py  tree.py  utils.py
docs/: AI workflow.md
tests/: test.py  test_.py  test_entry.py  test_functionality.py  test_memory.py  test_node.py  test_serializer.py  test_tdd.py  test_tree.py  test_utils.py
uidtree/: classes.py  const.py  entry.py  memory.py  node.py  serializer.py  tree.py
