[metadata]
name = uidtree
version = 0.0.4.dev1
description = Your project description
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://your.project.url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    rwlock
    cachetools
python_requires = >=3.7

[options.extras_require]
dev =
    pytest
    beartype

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    your_script = your_module:main
