[metadata]
name = uidtree
version = 0.0.1
description = UIDTree
long_description = file: README.md
long_description_content_type = text/markdown
author = Anselm Kiefner
author_email = uidtree-github@anselm.kiefner.de
url = https://github.com/amogorkon/uidtree
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    rwlock
    cachetools
python_requires = >=3.12

[options.extras_require]
dev =
    pytest
    beartype

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    your_script = uidtree:main
